--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "bootstrap": "^5.2.3",
+    "react-bootstrap": "^2.7.0",
+    "@apollo/client": "^3.3.7",
+    "graphql": "^16.6.0",
+    "jwt-decode": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
