--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-snowfall": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
